objects/Vendor_Case__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Vendor_Cases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipName>Vendor_Cases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipName>Vendor_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Note &amp; Quote</label>
    <nameField>
        <label>Vendor Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendor Notes &amp; Quotes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>